added midpoint media querie -header section

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
       <!--Article section of page. Use <article> tag?? -->
       <section class="more-content clearfix">
-          <div class="article-one">
+          <article class="article-one">
             <img src="Galass-Handbags-Assets/right-photo.jpg" alt="See though clutch with black leather trim."/>
             <div class="text-one">
               <h2>Fall Trends</h2>
@@ -132,9 +132,9 @@
               </p>
               <a class="read" href="#">read more</a>
             </div><!--end of text-->
-          </div><!--end of post wrap-->
+        </article><!--end of post wrap-->
 
-          <div class="article-two">
+          <article class="article-two">
             <img src="Galass-Handbags-Assets/left-photo.jpg" alt="Brown leather handbag with foldeover buckel-style closure and tan pompom"/>
             <div class="text-two">
               <h2>Vegan Leather</h2>
@@ -147,7 +147,7 @@
               </p>
               <a class="read" href="#">read more</a>
             </div> <!--end of text-->
-          </div> <!--end of post wrap-->
+        </article> <!--end of post wrap-->
       </section>
     </main>
 
@@ -182,7 +182,7 @@
           <p>
             info@email.com | 123-456-7890
             <span>123 some road, Toronto, ON</span>
-            <span>A5A 5A5, Canada</span>
+            <span class="no-wrap">A5A 5A5,</span> Canada
           </p>
         </div> <!--end of contact-->
       </div> <!-- wrapper -->
