--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
         <div class="contact">
           <h3>Contact</h3>
           <p>
-            info@email.com | 123-456-7890
-            <span>123 some road, Toronto, ON</span>
-            <span class="no-wrap">A5A 5A5,</span> Canada
+            <span class="no-wrap">info@email.com | 123-456-7890</span>
+            <span class="no-wrap">123 some road, Toronto, ON</span>
+            <span class="no-wrap">A5A 5A5, Canada</span>
           </p>
         </div> <!--end of contact-->
       </div> <!-- wrapper -->
