--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <section class="content-1">
         <div class="wrapper clearfix">
 
-          <img src="Galass-Handbags-Assets/square-photo.jpg" alt="Photo of lady with a forest green handbag, photo is cropped to show only her sholders to knees."/>
+          <img src="Galass-Handbags-Assets/square-photo.jpg" alt="Photo of lady with a forest green handbag, with brown leather and canvas straps."/>
 
           <div class="crafted-text">
             <h2>Hand crafted</h2>
@@ -135,7 +135,7 @@
         </article><!--end of post wrap-->
 
           <article class="article-two">
-            <img src="Galass-Handbags-Assets/left-photo.jpg" alt="Brown leather handbag with foldeover buckel-style closure and tan pompom"/>
+            <img src="Galass-Handbags-Assets/left-photo.jpg" alt="Brown leather handbag with fold-over buckle-style closure and tan pompom"/>
             <div class="text-two">
               <h2>Vegan Leather</h2>
               <p>
